Now it has the first time full functionality